--- a/BezoBots_Main/package.xml
+++ b/BezoBots_Main/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>41068_SPR2024_BezoBots</name>
+  <name>bezobots</name>
   <version>1.0.0</version>
   <description>Project Package for Team BezoBots for Robotics Studio 1 Spring 2024</description>
   <maintainer email="zahead.rashidi@student.uts.edu.au">Zahead Rashidi</maintainer>
@@ -16,6 +16,8 @@
   <depend>nav_msgs</depend> <!-- Add this for navigation message types -->
   <depend>turtlebot3_navigation2</depend> <!-- Add this if you are using TurtleBot3 navigation -->
   <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>OpenCV</depend>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
 
