--- a/BezoBots_Main/package.xml
+++ b/BezoBots_Main/package.xml
@@ -18,6 +18,7 @@
   <depend>turtlebot3_navigation2</depend> <!-- Add this if you are using TurtleBot3 navigation -->
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
   <depend>OpenCV</depend>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
