--- a/BezoBots_Main/package.xml
+++ b/BezoBots_Main/package.xml
@@ -8,18 +8,20 @@
   <license>BSD</license>
 
   <!-- Dependencies -->
-  <depend>gazebo_ros_pkgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_action</depend>
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend> <!-- Add this for geometry message types -->
   <depend>sensor_msgs</depend> <!-- Add this for sensor message types -->
   <depend>nav_msgs</depend> <!-- Add this for navigation message types -->
+  <depend>nav2_msgs</depend> 
   <depend>turtlebot3_navigation2</depend> <!-- Add this if you are using TurtleBot3 navigation -->
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2_ros</depend>
   <depend>OpenCV</depend>
+  <depend>gazebo_ros_pkgs</depend>
+  <depend>gazebo_msgs</depend>
   
   <buildtool_depend>ament_cmake</buildtool_depend>
 
